# agentic_ai_marketplace

./: .dockerignore  .gitignore  AzuriteConfig  CLAUDE.md  DEVELOPER_CHECKLIST.md  ENDPOINT_ANALYSIS_REPORT.md  LANGGRAPH_INTEGRATION.md  README-RAG-ENHANCED.md  README.md  SETUP_GUIDE.md  TODO_ANALYSIS.md  WORKING_ENDPOINTS_GUIDE.md  __azurite_db_table__.json  debug_projects.py  docker-compose.yml  fix_projects_data.sql  fix_projects_schema.sql  fix_projects_simple.sql  initial_setup.py  insert_minimal_data.py  package-lock.json  recreate_database.py  run_migration.py  run_migration_simple.py  setup_complete_backend.sh  test_after_fix.py  test_agent_configurations.py  test_agent_lifecycle.py  test_db_setup.py  test_enhanced_capabilities.py  test_projects_api.py  validate_fix.py
backend/: .dockerignore  (+2 more)
backend/services/agents/: .dockerignore  .gitignore  A2A_README.md  Dockerfile  pyproject.toml  requirements.txt
backend/services/agents/agent_cards/: conversation_agent.json  general_ai_agent.json  rag_agent.json  task_executor_agent.json  tools_agent.json
backend/services/agents/app/: main.py
backend/services/agents/app/api/: a2a.py  agent_management.py  agents.py
backend/services/agents/app/api/v1/: registry.py
backend/services/agents/app/core/: auth.py  config.py  database.py
backend/services/agents/app/examples/: agent_examples.py  sample_queries.py
backend/services/agents/app/mcp/: server.py
backend/services/agents/app/schemas/: agent_management.py
backend/services/agents/app/services/: a2a_handler.py  agent_service.py  gemini_service.py  langgraph_agent_manager.py
backend/services/gateway/: .dockerignore  .env.example  .gitignore  AUTH_README.md  Dockerfile  check_tables.py  debug_config.py  insert_sample_data.py  migrate_auth.py  pyproject.toml  requirements.txt  run.py  setup_auth.py  test_db.py  test_import.py  test_redis.py
backend/services/gateway/app/: main.py  minimal_test.py
backend/services/gateway/app/api/: __init__.py  agents.py  chat_a2a.py  environment.py  mcp_gateway.py  mcp_registry.py  rag.py  sample_queries.py  tools.py  workflows.py
backend/services/gateway/app/api/v1/: __init__.py  a2a_chat.py  auth.py  default_chat.py  embedding_models.py  health.py  llm_models.py  memory.py  metadata.py  monitoring.py  notification.py  projects.py  proxy.py  stats.py
backend/services/gateway/app/core/: config.py  database.py  dependencies.py
backend/services/gateway/app/middleware/: __init__.py  request.py
backend/services/gateway/app/models/: __init__.py  chat_models.py  db_models.py  demo_queries.py  environment.py  mcp_models.py  project.py  sample_queries.py  user.py
backend/services/gateway/app/models/database/: user.py
backend/services/gateway/app/schemas/: notification.py
backend/services/gateway/app/services/: a2a_agent_executor.py  a2a_agent_service.py  auth_service.py  default_chat_service.py  dynamic_tool_loader.py  langgraph_model_service.py  notification_service.py  project_service.py  websocket_manager.py
backend/services/observability/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/services/observability/app/: main.py
backend/services/orchestrator/: .dockerignore  .gitignore  A2A_ORCHESTRATOR_README.md  Dockerfile  pyproject.toml  requirements.txt
backend/services/orchestrator/app/: main.py
backend/services/orchestrator/app/api/: a2a.py  health.py
backend/services/orchestrator/app/api/v1/: agents.py  tasks.py  workflows.py
backend/services/orchestrator/app/core/: config.py  database.py
backend/services/orchestrator/app/models/: a2a_models.py
backend/services/orchestrator/app/services/: a2a_orchestrator.py  agent_service.py  remote_agent_connection.py  task_queue.py  workflow_service.py
backend/services/rag/: .dockerignore  .gitignore  Dockerfile  README.md  download_nltk_data.py  pyproject.toml  requirements.txt
backend/services/rag/app/: config.py  main.py  main_new.py  main_old.py  vector_store.py
backend/services/sqltool/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/services/sqltool/app/: main.py
backend/services/tools/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/services/tools/app/: langgraph_integration.py  langgraph_integration_v2.py  main.py  physical_tool_loader.py
backend/services/tools/app/api/: enhanced_rag_pipeline.py  physical_tools.py  rag_pipeline.py  sample_queries.py  simple_tool_management.py  tool_management.py  tools.py  tools_enhanced.py
backend/services/tools/app/core/: config.py
backend/services/tools/app/examples/: sample_queries.py  tool_examples.py
backend/services/tools/app/mcp/: rag_mcp_server.py
backend/services/tools/app/models/: database.py  execution_models.py  tool_management.py  tools.py
backend/services/tools/app/schemas/: tool_management.py  tool_schemas.py
backend/services/tools/app/seeds/: postgres_rag_template_seed.py
backend/services/tools/app/services/: database_service.py  enhanced_chat_service.py  enhanced_model_service.py  enhanced_rag_service_v2.py  langgraph_tool_manager.py  mcp_client.py  rag_service.py  standard_tools.py  tool_execution_service.py  tool_executor.py  tool_management_service.py  tool_registry.py
backend/services/tools/app/templates/: postgres_rag_template.py
backend/services/tools/app/tool_implementations/: README.md
backend/services/workflow-engine/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/services/workflow-engine/app/: main.py
backend/services/workflow-engine/app/api/: sample_queries.py  workflows.py
backend/services/workflow-engine/app/examples/: sample_queries.py
backend/services/workflow-engine/app/models/: database.py  workflows.py
backend/services/workflow-engine/app/services/: database_service.py
backend/services/workflows/: default_workflow_agent.py  main.py  pyproject.toml  requirements.txt  simple_workflow_service.py  test_workflow.py
backend/services/workflows/app/: main.py
experiments/: Untitled.ipynb  pyproject.toml
(+262 files in other folders)
