[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "alembic>=1.16.4",
    "anthropic>=0.64.0",
    "asyncpg>=0.30.0",
    "autogen-agentchat>=0.7.4",
    "black>=25.1.0",
    "crewai>=0.165.1",
    "fastapi[all]>=0.116.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "openai>=1.99.9",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "prometheus-client>=0.22.1",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "semantic-kernel>=1.35.3",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
