[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.0",
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "black>=25.1.0",
    "click>=8.2.1",
    "fastapi[all]>=0.116.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.1.0",
    "langgraph>=0.3.18",
    "mypy>=1.17.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-jaeger>=1.11.1",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-redis>=0.57b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.22.1",
    "psutil>=7.0.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.0.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "starlette>=0.47.2",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
]
