[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "celery[redis]>=5.5.3",
    "click>=8.2.1",
    "croniter>=6.0.0",
    "fastapi[all]>=0.116.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.31",
    "mypy>=1.17.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-redis>=0.57b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "pika>=1.3.2",
    "prefect>=3.4.14",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "redis>=5.2.1",
    "rich>=14.1.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
    "temporalio>=1.16.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
]
