[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "chardet>=5.2.0",
    "click>=8.2.1",
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "fastapi[all]>=0.116.1",
    "langchain-core>=0.3.74",
    "langgraph>=0.6.6",
    "mcp-client>=0.0.0",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pypdf>=6.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
